adicionar logo/nome/estilização/aba consequencia

--- a/causa.html
+++ b/causa.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Queimadas,o mal do Humano</title>
     <link rel="stylesheet" href="causa.css">
-  <link rel="shortcut icon" href="" type="image/x-icon">
+  <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
         <nav class="navbar">
-            <div class="logo">Queimadas</div>
+            <div class="logo">Queimadas, O Mal do Humano</div>
             <ul>
                 <li><a href="home.html">Início</a></li>
                 <li><a href="causa.html">Causas das Queimadas</a></li>
-                <li><a href="">Consequências das Queimadas</a></li>
+                <li><a href="consequencia.html">Consequências das Queimadas</a></li>
                 <li><a href="">Prevenção e Combate</a></li>
                 <li><a href="">Galeria de Fotos</a></li>
                 <li><a href="">Contato</a></li>
@@ -74,25 +74,7 @@
         <div class="imagensExemplo">
             <img src="imagens/clima.jpg" alt="Exemplo de Queimada">
         </div>
-    
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+        
         <script src="causas.js"></script>
 </body>
 </html>
