--- a/home.html
+++ b/home.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Queimadas, o mal do humano</title>
     <link rel="stylesheet" href="home.css">
-  <link rel="shortcut icon" href="" type="image/x-icon">
+  <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
         <nav class="navbar">
-            <div class="logo">Queimadas</div>
+            <div class="logo">Queimadas, O Mal do Humano</div>
             <ul>
                 <li><a href="home.html">Início</a></li>
                 <li><a href="causa.html">Causas das Queimadas</a></li>
-                <li><a href="">Consequências das Queimadas</a></li>
+                <li><a href="consequencia.html">Consequências das Queimadas</a></li>
                 <li><a href="">Prevenção e Combate</a></li>
                 <li><a href="">Galeria de Fotos</a></li>
                 <li><a href="">Contato</a></li>
@@ -58,21 +58,21 @@
 
     <div class="container">
         <div class="exemplo">
-            <h2>Antes da Queimada</h2>
+            <h2>Antes </h2>
             <img src="imagens/queimada1[2].jpg" alt="Floresta verde antes da queimada">
         </div>
         <div class="exemplo">
-            <h2>Depois da Queimada</h2>
+            <h2>Depois </h2>
             <img src="imagens/queimada1.jpg" alt="Floresta devastada após a queimada">
         </div>
     </div>
     <div class="container">
         <div class="exemplo">
-            <h2>Antes da Queimada</h2>
+            <h2>Antes </h2>
             <img src="imagens/queimada2[2].jpg" alt="Floresta verde antes da queimada">
         </div>
         <div class="exemplo">
-            <h2>Depois da Queimada</h2>
+            <h2>Depois</h2>
             <img src="imagens/qeuimada2.jpg" alt="Floresta devastada após a queimada">
         </div>
     </div>
