--- a/home.html
+++ b/home.html
@@ -15,9 +15,9 @@
                 <li><a href="home.html">Início</a></li>
                 <li><a href="causa.html">Causas das Queimadas</a></li>
                 <li><a href="consequencia.html">Consequências das Queimadas</a></li>
-                <li><a href="">Prevenção e Combate</a></li>
-                <li><a href="">Galeria de Fotos</a></li>
-                <li><a href="">Contato</a></li>
+                <li><a href="prevençao.html">Prevenção e Combate</a></li>
+                <li><a href="galeria.html">Galeria de Fotos</a></li>
+                <li><a href="contato.html">Contato</a></li>
             </ul>
             <div class="menu" id="menuPrint">&#9776;</div>
         </nav>
