--- a/prevencao.html
+++ b/prevencao.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Queimadas, o mal do humano</title>
-    <link rel="stylesheet" href="prevençao.css">
+    <link rel="stylesheet" href="prevencao.css">
   <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
 </head>
 <body>
@@ -15,7 +15,7 @@
                 <li><a href="home.html">Início</a></li>
                 <li><a href="causa.html">Causas das Queimadas</a></li>
                 <li><a href="consequencia.html">Consequências das Queimadas</a></li>
-                <li><a href="prevençao.html">Prevenção e Combate</a></li>
+                <li><a href="prevencao.html">Prevenção e Combate</a></li>
                 <li><a href="galeria.html">Galeria de Fotos</a></li>
                 <li><a href="contato.html">Contato</a></li>
             </ul>
