--- a/causa.html
+++ b/causa.html
@@ -15,7 +15,7 @@
                 <li><a href="home.html">Início</a></li>
                 <li><a href="causa.html">Causas das Queimadas</a></li>
                 <li><a href="consequencia.html">Consequências das Queimadas</a></li>
-                <li><a href="prevençao.html">Prevenção e Combate</a></li>
+                <li><a href="prevencao.html">Prevenção e Combate</a></li>
                 <li><a href="galeria.html">Galeria de Fotos</a></li>
                 <li><a href="contato.html">Contato</a></li>
             </ul>
