--- a/index/consequencia.html
+++ b/index/consequencia.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Queimadas, o mal do humano</title>
-    <link rel="stylesheet" href="consequencia.css">
-  <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../style/consequencia.css">
+  <link rel="shortcut icon" href="../imagens/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -24,7 +24,7 @@
     </header>
 
     <div class="banner">
-        <img src="imagens/banner-queimadas-brasil-.jpg" alt="banner queimada Brasil">
+        <img src="../imagens/banner-queimadas-brasil-.jpg" alt="banner queimada Brasil">
     </div>
 
     <div class="titulo">   
@@ -80,6 +80,6 @@
         </div>
     </div>
 
-    <script src="home.js"></script>
+    <script src="../home.js"></script>
 </body>
 </html>
