--- a/index/contato.html
+++ b/index/contato.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Queimadas, o mal do humano</title>
-    <link rel="stylesheet" href="contato.css">
-  <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../style/contato.css">
+  <link rel="shortcut icon" href="../imagens/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -53,6 +53,6 @@
         <p><b>Linkedin:</b><a href="https://br.linkedin.com/company/ibama" target="_blank"> Clique aqui</a></p>
     </div>
 
-    <script src="home.js"></script>
+    <script src="../home.js"></script>
 </body>
 </html>
