--- a/index/home.html
+++ b/index/home.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Queimadas, o mal do humano</title>
-    <link rel="stylesheet" href="home.css">
-  <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../style/home.css">
+  <link rel="shortcut icon" href="../imagens/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -24,7 +24,7 @@
     </header>
         
 <div class="banner">
-    <img src="imagens/banner-lp-queimadas.png" alt="banner queimada Brasil">
+    <img src="../imagens/banner-lp-queimadas.png" alt="banner queimada Brasil">
 </div>
 
 
@@ -59,23 +59,23 @@
     <div class="container">
         <div class="exemplo">
             <h2>Antes </h2>
-            <img src="imagens/queimada1[2].jpg" alt="Floresta verde antes da queimada">
+            <img src="../imagens/queimada1[2].jpg" alt="Floresta verde antes da queimada">
         </div>
         <div class="exemplo">
             <h2>Depois </h2>
-            <img src="imagens/queimada1.jpg" alt="Floresta devastada após a queimada">
+            <img src="../imagens/queimada1.jpg" alt="Floresta devastada após a queimada">
         </div>
     </div>
     <div class="container">
         <div class="exemplo">
             <h2>Antes </h2>
-            <img src="imagens/queimada2[2].jpg" alt="Floresta verde antes da queimada">
+            <img src="../imagens/queimada2[2].jpg" alt="Floresta verde antes da queimada">
         </div>
         <div class="exemplo">
             <h2>Depois</h2>
-            <img src="imagens/qeuimada2.jpg" alt="Floresta devastada após a queimada">
+            <img src="../imagens/qeuimada2.jpg" alt="Floresta devastada após a queimada">
         </div>
     </div>
-<script src="home.js"></script>
+<script src="../home.js"></script>
 </body>
 </html>
