--- a/index/prevencao.html
+++ b/index/prevencao.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Queimadas, o mal do humano</title>
-    <link rel="stylesheet" href="prevencao.css">
-  <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../style/prevencao.css">
+  <link rel="shortcut icon" href="../imagens/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -24,7 +24,7 @@
     </header>
         
     <div class="banner">
-        <img src="imagens/atualizado-banner-queimadas-.png"banner queimada Brasil">
+        <img src="../imagens/atualizado-banner-queimadas-.png"banner queimada Brasil">
     </div>
 
     <div class="titulo">   
@@ -47,7 +47,7 @@
     </div>
 
     <div class="infografico">
-        <img src="imagens/Infografico_queimadas.jpg" alt="oque fazer e nao fazer ">
+        <img src="../imagens/Infografico_queimadas.jpg" alt="oque fazer e nao fazer ">
     </div>
     
     <div class="descriçao">
@@ -78,6 +78,6 @@
         <p>O <a href="https://panorama.sipam.gov.br/painel-do-fogo/" target="_blank">Painel do Fogo</a> é uma plataforma Web que disponibiliza informações sobre incêndios e queimadas no Brasil. Seu principal foco é subsidiar o acionamento de brigadas ou batalhões durante o combate ao fogo. A plataforma combina dados de diferentes satélites para informar ao usuário o 'perímetro' e o “status” mais recente sobre uma queimada ou incêndio de modo que um evento esteja associado a uma ocorrência ou acionamentos de equipes. Com este foco o painel do fogo integra necessidades intrínsecas ao acionamento como:</p>
     </div>
 
-    <script src="home.js"></script>
+    <script src="../home.js"></script>
 </body>
 </html>
