--- a/index/galeria.html
+++ b/index/galeria.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Queimadas, o mal do humano</title>
-    <link rel="stylesheet" href="galeria.css">
-  <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../style/galeria.css">
+  <link rel="shortcut icon" href="../imagens/favicon.ico" type="image/x-icon">
 </head>
 <body>      
     <header>
@@ -49,14 +49,14 @@
     </div>
 
     <div class="galeriaFotos">
-        <div class="fotos"><img src="imagens/fotoqueimada.jpg" alt="Imagem 1"></div>
-        <div class="fotos"><img src="imagens/SERRABELEZA.jpg" alt="Imagem 2"></div>
-        <div class="fotos"><img src="imagens/agricola (1).jpg" alt="Imagem 3"></div>
-        <div class="fotos"><img src="imagens/queimada4.jpg" alt="Imagem 4"></div>
-        <div class="fotos"><img src="imagens/queimada5.jpg" alt="Imagem 5"></div>
-        <div class="fotos"><img src="imagens/queimada6.jpg" alt="Imagem 6"></div>
-        <div class="fotos"><img src="imagens/queimada7.jpg" alt="Imagem 7"></div>
-        <div class="fotos"><img src="imagens/queimada8.jpg" alt="Imagem 8"></div>
+        <div class="fotos"><img src="../imagens/fotoqueimada.jpg" alt="Imagem 1"></div>
+        <div class="fotos"><img src="../imagens/SERRABELEZA.jpg" alt="Imagem 2"></div>
+        <div class="fotos"><img src="../imagens/agricola (1).jpg" alt="Imagem 3"></div>
+        <div class="fotos"><img src="../imagens/queimada4.jpg" alt="Imagem 4"></div>
+        <div class="fotos"><img src="../imagens/queimada5.jpg" alt="Imagem 5"></div>
+        <div class="fotos"><img src="../imagens/queimada6.jpg" alt="Imagem 6"></div>
+        <div class="fotos"><img src="../imagens/queimada7.jpg" alt="Imagem 7"></div>
+        <div class="fotos"><img src="../imagens/queimada8.jpg" alt="Imagem 8"></div>
       </div>
   
       <script src="home.js"></script>
