--- a/index/causa.html
+++ b/index/causa.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header>
+        <!-- barra de navegação  -->
         <nav class="navbar">
             <div class="logo">Queimadas, O Mal do Humano</div>
             <ul>
@@ -22,6 +23,7 @@
             <div class="menu" id="menuPrint">&#9776;</div>
         </nav>
     </header>
+
 
     <div class="banner">
         <img src="../imagens/banner2.png" alt="banner queimada Brasil">
@@ -74,7 +76,7 @@
         <div class="imagensExemplo">
             <img src="../imagens/clima.jpg" alt="Exemplo de Queimada">
         </div>
-        
+        <!-- importando o javaScipt -->
         <script src="../home.js"></script>
 </body>
 </html>
