--- a/index/consequencia.html
+++ b/index/consequencia.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header>
+        <!-- barra de navegação  -->
         <nav class="navbar">
             <div class="logo">Queimadas, O Mal do Humano</div>
             <ul>
@@ -52,7 +53,7 @@
     <div class="titulo">   
         <H2>Gráfico que representa o aumento dos focos de queimadas em diferentes regiões em Agosto </H2>
     </div>
-
+            <!-- grafico estilizado -->
     <div class="contGrafico">
         <div class="barra">
             <div class="rotBarra">São Paulo</div>
@@ -79,7 +80,7 @@
             <div class="valorBarra barra-200">200%</div>
         </div>
     </div>
-
+        <!-- importando o javaScipt -->
     <script src="../home.js"></script>
 </body>
 </html>
