--- a/index/galeria.html
+++ b/index/galeria.html
@@ -9,6 +9,7 @@
 </head>
 <body>      
     <header>
+        <!-- barra de navegação  -->
         <nav class="navbar">
             <div class="logo">Queimadas, O Mal do Humano</div>
             <ul>
@@ -58,7 +59,7 @@
         <div class="fotos"><img src="../imagens/queimada7.jpg" alt="Imagem 7"></div>
         <div class="fotos"><img src="../imagens/queimada8.jpg" alt="Imagem 8"></div>
       </div>
-  
+        <!-- importando o javaScipt -->
       <script src="home.js"></script>
 </body>
 </html>
