--- a/index/prevencao.html
+++ b/index/prevencao.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header>
+        <!-- barra de navegação  -->
         <nav class="navbar">
             <div class="logo">Queimadas, O Mal do Humano</div>
             <ul>
@@ -78,6 +79,7 @@
         <p>O <a href="https://panorama.sipam.gov.br/painel-do-fogo/" target="_blank">Painel do Fogo</a> é uma plataforma Web que disponibiliza informações sobre incêndios e queimadas no Brasil. Seu principal foco é subsidiar o acionamento de brigadas ou batalhões durante o combate ao fogo. A plataforma combina dados de diferentes satélites para informar ao usuário o 'perímetro' e o “status” mais recente sobre uma queimada ou incêndio de modo que um evento esteja associado a uma ocorrência ou acionamentos de equipes. Com este foco o painel do fogo integra necessidades intrínsecas ao acionamento como:</p>
     </div>
 
+    <!-- importando o javaScipt -->
     <script src="../home.js"></script>
 </body>
 </html>
