--- a/index/contato.html
+++ b/index/contato.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header>
+        <!-- barra de navegação  -->
         <nav class="navbar">
             <div class="logo">Queimadas, O Mal do Humano</div>
             <ul>
@@ -22,7 +23,7 @@
             <div class="menu" id="menuPrint">&#9776;</div>
         </nav>
     </header>
-
+        <!-- formulario de contato -->
     <section class="contato">
         <h2>Contato</h2>
         <form action="#">
@@ -46,13 +47,13 @@
     <div class="paragrafo">
         <p><b>Endereço:</b> Praça Quinze de Novembro, 42 - Centro, Rio de Janeiro - RJ, 20010-010</p>
         <p><b>Telefone:</b> (21) 3077-4252</p>
-
+            <!-- direcionamento para paginas oficiais do tema -->
         <p><b>Facebook:</b><a href="https://www.facebook.com/ibama.gov.br" target="_blank"> Clique aqui</a></p>
         <p><b>Instagram:</b><a href="https://www.instagram.com/ibamagov/?hl=pt-br" target="_blank"> Clique aqui</a></p>
         <p><b>Youtube:</b><a href="https://www.youtube.com/channel/UCJEJjqCqqDzdW9vaZE_Ct-g" target="_blank"> Clique aqui</a></p>
         <p><b>Linkedin:</b><a href="https://br.linkedin.com/company/ibama" target="_blank"> Clique aqui</a></p>
     </div>
-
+<!-- importando o javaScipt -->
     <script src="../home.js"></script>
 </body>
 </html>
