--- a/index/home.html
+++ b/index/home.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header>
+        <!-- barra de navegação  -->
         <nav class="navbar">
             <div class="logo">Queimadas, O Mal do Humano</div>
             <ul>
@@ -43,7 +44,7 @@
         
         <p>As queimadas antrópicas podem ser consideradas crimes e as leis ambientais proíbem que elas sejam feitas:</p>  
     </div>
-     
+     <!-- listagem -->
     <ul class="exp">
         <li>A menos de 15 metros dos limites da faixa de segurança das linhas de transmissão e distribuição de energia elétrica. </li>
         <li>Numa faixa de 100 metros, ao redor da área de domínio de subestação de energia elétrica.  </li>
@@ -76,6 +77,7 @@
             <img src="../imagens/qeuimada2.jpg" alt="Floresta devastada após a queimada">
         </div>
     </div>
+    <!-- importando o javaScipt -->
 <script src="../home.js"></script>
 </body>
 </html>
