--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Queimadas, o mal do humano</title>
-    <link rel="stylesheet" href="../style/home.css">
+    <link rel="stylesheet" href="../style/index.css">
   <link rel="shortcut icon" href="../imagens/favicon.ico" type="image/x-icon">
 </head>
 <body>
@@ -13,7 +13,7 @@
         <nav class="navbar">
             <div class="logo">Queimadas, O Mal do Humano</div>
             <ul>
-                <li><a href="home.html">Início</a></li>
+                <li><a href="index.html">Início</a></li>
                 <li><a href="causa.html">Causas das Queimadas</a></li>
                 <li><a href="consequencia.html">Consequências das Queimadas</a></li>
                 <li><a href="prevencao.html">Prevenção e Combate</a></li>
