--- a/index/causa.html
+++ b/index/causa.html
@@ -13,7 +13,7 @@
         <nav class="navbar">
             <div class="logo">Queimadas, O Mal do Humano</div>
             <ul>
-                <li><a href="home.html">Início</a></li>
+                <li><a href="index.html">Início</a></li>
                 <li><a href="causa.html">Causas das Queimadas</a></li>
                 <li><a href="consequencia.html">Consequências das Queimadas</a></li>
                 <li><a href="prevencao.html">Prevenção e Combate</a></li>
